src/objects/HR_Case__c.object
<CustomObject>
    <fields>
        <fullName>HRM_Total_Remaining_Days_to_Close_Case__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Open&quot;),
IF(OR(AND(RecordType.DeveloperName == &quot;HRM_Disciplinary_Case&quot;, OR(ISPICKVAL(HRM_Proposed_Type_of_Action__c,&quot;Warning Notice&quot;), ISPICKVAL(HRM_Proposed_Type_of_Action__c, &quot;Reprimand&quot;))), AND(RecordType.DeveloperName == &quot;HRM_Performance_Case&quot;, ISPICKVAL(HRM_Proposed_Type_of_Action__c,&quot;&quot;))),
(30 - ((TODAY() - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c )+1)),
IF(OR(AND(RecordType.DeveloperName == &quot;HRM_Disciplinary_Case&quot;, OR (ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Suspension&quot;), ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Removal&quot;), ISPICKVAL(HRM_Proposed_Type_of_Action__c,&quot;Demotion&quot;), ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Reassignment&quot;))), AND( RecordType.DeveloperName == &quot;HRM_Performance_Case&quot;, OR(ISPICKVAL(HRM_Proposed_Type_of_Action__c,&quot;Removal&quot;), ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Demotion&quot;), ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Reassignment&quot;), ISPICKVAL( HRM_Proposed_Type_of_Action__c,&quot;Denial WIGI&quot;)))), (60 - ((TODAY() - HRM_Date_MGMT_HR_Agree_to_Prop_Action__c )+1)),
IF(OR(AND (RecordType.DeveloperName == &quot;HRM_Grievances_and_Arbitration_Case&quot;, ISPICKVAL( HRM_Expedited_Greviance__c, &quot;No&quot;)), RecordType.DeveloperName == &quot;HRM_Reasonable_Accommodation_RA_Case&quot;), (30 - ((TODAY() - HRM_Date_Received__c )+1)),
IF(AND (RecordType.DeveloperName == &quot;HRM_Grievances_and_Arbitration_Case&quot;, ISPICKVAL(HRM_Expedited_Greviance__c, &quot;Yes&quot;)),
(15 - ((TODAY() - HRM_Date_Received__c )+1)), IF(RecordType.DeveloperName == &quot;HRM_Medical_Case&quot;,
(30 - ((TODAY() - HRM_Date_MGMT_HR_Agree_to_Action__c )+1)), IF(RecordType.DeveloperName == &quot;HRM_OIG_Case&quot;, (60 - ((TODAY() - HRM_Date_Received__c )+1)),0)))))),0)</formula>
        <label>Total # Remaining Days to Close Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Type_of_Action__c</fullName>
        <label>Type of Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse</fullName>
                </value>
                <value>
                    <fullName>Non Adverse</fullName>
                </value>
                <value>
                    <fullName>Fitness for Duty</fullName>
                </value>
                <value>
                    <fullName>FMLA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Type_of_Appeal_Action__c</fullName>
        <label>Type of Appeal Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>MSPB</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Grievance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Type_of_Ethical_Violation__c</fullName>
        <inlineHelpText>If yes to ethical conduct</inlineHelpText>
        <label>Type of Ethical Violation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HRM_Ethical_Conduct_Violation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts from outside sources</fullName>
                </value>
                <value>
                    <fullName>Gifts between employees</fullName>
                </value>
                <value>
                    <fullName>Conflicting financial interests</fullName>
                </value>
                <value>
                    <fullName>Impartiality in performance of official duties</fullName>
                </value>
                <value>
                    <fullName>Seeking other employment</fullName>
                </value>
                <value>
                    <fullName>Misuse of position, Government resources, and information</fullName>
                </value>
                <value>
                    <fullName>Conflicting outside activities</fullName>
                </value>
                <value>
                    <fullName>Compensation for teaching, speaking, and writing Indebtedness</fullName>
                </value>
                <value>
                    <fullName>Any of the 14 Principles of Ethical Conduct</fullName>
                </value>
                <value>
                    <fullName>Provision(s) in GSA supplemental regulation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIG_Case_Subtype__c</fullName>
        <label>OIG Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Hotline Complaint</fullName>
                </value>
                <value>
                    <fullName>Report of Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_HR_Case_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent HR Case #</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HR_Case__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>OIG Case, Disciplinary Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HR_Case__c</referenceTo>
        <relationshipLabel>HR Cases</relationshipLabel>
        <relationshipName>CPO_Parent_OIG_Personnel_Case_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Low: (default) Routine case processing.
 
Medium: Some level of sensitivity, urgency, or heightened level of awareness.  
 
High: Higher level of visibility, extenuating circumstances, may require immediate attention, or be highly sensitive.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RA_Date_Reconsideration_Decision_Issued__c</fullName>
        <label>RA Date Reconsideration Decision Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RA_Name_of_Representative__c</fullName>
        <label>RA Name of Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Intake Reviewer</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Assigned to Responsible Office Official</fullName>
                </value>
                <value>
                    <fullName>Assigned to Action Officer</fullName>
                </value>
                <value>
                    <fullName>Assigned to Assigned Specialist</fullName>
                </value>
                <value>
                    <fullName>Ready for Action Officer to View</fullName>
                </value>
                <value>
                    <fullName>Reviewed by Action Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - In Appeal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Days_Adverse_Decided_SLA__c</fullName>
        <description>Non-Adverse Decided SLA field (new field) should display the number of days total between the &quot;Date MGMT and HR Agree to Decided Action&quot; and the &quot;Date Initial Draft to MGMT&quot; or the &quot;Date Final Decision Letter to Supervisor&quot;
(Used same field for Disciplinary and Performance Decided Case)</description>
        <formula>HRM_Date_Initial_Draft_to_MGMT__c-HRM_Date_MGMT_HR_Agree_to_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Days Adverse Decided SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Adverse_Proposed_SLA__c</fullName>
        <description>Non-Adverse Proposed SLA field (new field) should display the number of days total between the &quot;Date MGMT and HR Agree to Proposed Action&quot; and the &quot;Date Initial Proposal Draft to MGMT&quot; or the &quot;Date Final Decision Letter to Supervisor&quot; (Used same field for Disciplinary and Performance Proposed Case)</description>
        <formula>HRM_Date_Initial_Prop_Draft_to_MGMT__c-HRM_Date_MGMT_HR_Agree_to_Prop_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Days Adverse Proposed SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_for_RA_SLA__c</fullName>
        <formula>HRM_RA_Date_MGMT_HR_Agree_to_Action__c  -  HRM_Date_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # Days for RA SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HR Case</label>
    <listViews>
        <fullName>All_HRM_Cases</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All HRM Cases</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_HRM_Cases</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open HRM Cases</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Marked_as_Private</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Private__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Marked as Private</label>
        <sharedTo>
            <group>HRM_Superusers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Marked_for_Deletion</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>Status__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases Marked for Deletion</label>
        <sharedTo>
            <group>HRM_Superusers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_in_Appeal</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Date_of_Appeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed - In Appeal</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases in Appeal</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Cases</fullName>
        <columns>NAME</columns>
        <columns>HRM_Credit_Card_Case__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Days_in_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HRM_Credit_Card_Case__c</field>
            <operation>equals</operation>
            <value>Purchase,Travel</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Credit Card Cases</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ethical_Violation_Cases</fullName>
        <columns>NAME</columns>
        <columns>HRM_Type_of_Ethical_Violation__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Named_Employee__c</columns>
        <columns>HRM_If_Other_Ethical_Violation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HRM_Ethical_Conduct_Violation__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Ethical Violation Cases</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OIG_Cases_Awaiting_AS_cases</fullName>
        <columns>NAME</columns>
        <columns>HRM_OIG_Case_Number__c</columns>
        <columns>HRM_Date_Received__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>HRM_ROO_AO__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HRM_Assigned_Specialist__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>OIG Cases Awaiting AS Assignment</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OIG_Cases_Awaiting_ROO_AO_Assignment</fullName>
        <columns>NAME</columns>
        <columns>HRM_OIG_Case_Number__c</columns>
        <columns>HRM_Date_Received__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>HRM_ROO_AO__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Case__c.HRM_OIG_Case</value>
        </filters>
        <label>OIG Cases Awaiting ROO/AO Assignment</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Cases_w_High_Priority</fullName>
        <columns>NAME</columns>
        <columns>HRM_Case_Type__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Days_in_Process__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Cases with High Priority</label>
        <sharedTo>
            <group>HRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reasonable_Accommodations_Cases</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>HRM_Office__c</columns>
        <columns>HRM_Assigned_Specialist__c</columns>
        <columns>HRM_Total_Remaining_Days_to_Close_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HRM_Case_Type__c</field>
            <operation>equals</operation>
            <value>Reasonable Accommodation (RA) Case</value>
        </filters>
        <filters>
            <field>Marked_for_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Reasonable Accommodations Cases</label>
        <sharedTo>
            <group>HRM_RAS_Users</group>
            <group>HRM_Superusers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>HR-{0000000000}</displayFormat>
        <label>HR Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Cases</pluralLabel>
    <recordTypes>
        <fullName>HRM_Disciplinary_Case</fullName>
        <active>true</active>
        <description>This case type contains data for conduct based actions.</description>
        <label>Disciplinary Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRM_Grievances_and_Arbitration_Case</fullName>
        <active>true</active>
        <description>This case type contains data for Grievances and Arbitration matters.</description>
        <label>Grievances and Arbitration Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRM_Medical_Case</fullName>
        <active>true</active>
        <description>This case type contains data for medical issues (e.g. FFD, FMLA) except (RA) Reasonable Accommodation.</description>
        <label>Medical Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRM_OIG_Case</fullName>
        <active>true</active>
        <description>This case type contains data for matters referred by IG for action.</description>
        <label>OIG Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRM_Performance_Case</fullName>
        <active>true</active>
        <description>This case type contains data for performance based actions.</description>
        <label>Performance Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>HRM_Reasonable_Accommodation_RA_Case</fullName>
        <active>true</active>
        <description>This case type contains data for requests for Reasonable Accommodation.</description>
        <label>Reasonable Accommodation (RA) Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>AS_Access__c</fullName>
        <label>AS_Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ROO_AO_Access__c</fullName>
        <label>ROO_AO_Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>Child_Case_Cant_Be_Private</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISBLANK(Parent_HR_Case_No__c)), AND(NOT(Parent_HR_Case_No__r.Private__c),  Private__c), false)</errorConditionFormula>
        <errorDisplayField>Private__c</errorDisplayField>
        <errorMessage>Case should not be private when parent case is non-private.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_MGMT_n_HR_Agree_to_Decided_Actions</fullName>
        <active>true</active>
        <description>The System shall require the Date Initial decided Draft to MGMT to change on a &quot;Disciplinary Case&quot; and &quot;Performance Case&quot; if the value for Proposed Type of Action changes from &quot;- none -&quot; to Warning Notice, Reprimand</description>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &apos;HRM_Disciplinary_Case&apos;),  ISNULL(HRM_Date_MGMT_HR_Agree_to_Action__c), (ISPICKVAL( Status__c , &quot;Open&quot;)),OR(ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Warning Notice&quot;),ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Reprimand&quot;)))</errorConditionFormula>
        <errorDisplayField>HRM_Date_MGMT_HR_Agree_to_Action__c</errorDisplayField>
        <errorMessage>This date is required for chosen &quot;Proposed Type of Action&quot; (Warning Notice or Reprimand) while opening the case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_MGMT_n_HR_Agree_to_Proposed_Actions</fullName>
        <active>true</active>
        <description>The System shall require the Date Initial Proposal Draft to MGMT to change on a &quot;Performance Case&quot; if the value for Proposed Type of Action changes from &quot;- none -&quot; to Suspension, Denial WIGI, Removal, Demotion or Reassignment</description>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &apos;HRM_Disciplinary_Case&apos;,RecordType.DeveloperName = &apos;HRM_Performance_Case&apos;),  ISNULL(HRM_Date_MGMT_HR_Agree_to_Prop_Action__c),
(ISPICKVAL(Status__c, &quot;Open&quot;)),OR(ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Removal&quot;),ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Demotion&quot;),ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Reassignment&quot;),ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Suspension&quot;),ISPICKVAL( HRM_Proposed_Type_of_Action__c , &quot;Denial WIGI&quot;)))</errorConditionFormula>
        <errorDisplayField>HRM_Date_MGMT_HR_Agree_to_Prop_Action__c</errorDisplayField>
        <errorMessage>This date is required for chosen &quot;Proposed Type of Action&quot; while opening the case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Action_Appealed</fullName>
        <active>true</active>
        <description>Case can only be set to &quot;Closed - In Appeal&quot; if &quot;Action Appealed&quot; is Yes.</description>
        <errorConditionFormula>AND (NOT(ISPICKVAL( HRM_Action_Appealed__c ,&quot;Yes&quot;)), ISPICKVAL( Status__c ,&quot;Closed - In Appeal&quot;), 
OR(RecordType.DeveloperName  = &apos;HRM_Disciplinary_Case&apos;, RecordType.DeveloperName  = &apos;HRM_Performance_Case&apos;, RecordType.DeveloperName  = &apos;HRM_Medical_Case&apos;,  RecordType.DeveloperName = &apos;HRM_Grievances_and_Arbitration_Case&apos; ))</errorConditionFormula>
        <errorDisplayField>HRM_Action_Appealed__c</errorDisplayField>
        <errorMessage>Case can only be set to &quot;Closed - In Appeal&quot; if &quot;Action Appealed&quot; is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Assigned_Office_Code</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISPICKVAL( HRM_Assigned_Office_Code__c ,&quot;&quot;), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Assigned_Office_Code__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Assigned_Organization_Code</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISPICKVAL( HRM_Assigned_Organization_Code__c ,&quot;&quot;), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Assigned_Organization_Code__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Assigned_Point_of_Contact</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISBLANK(HRM_Assigned_Point_of_Contact__c), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Assigned_Point_of_Contact__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_BU_Status</fullName>
        <active>true</active>
        <description>BU Status is required if Bargaining Unit is Yes.</description>
        <errorConditionFormula>AND (ISPICKVAL(HRM_BU_Status__c,&quot;&quot;), ISPICKVAL( HRM_Bargaining_Unit__c ,&quot;Yes&quot;), 
OR(RecordType.DeveloperName  = &apos;HRM_Disciplinary_Case&apos;, RecordType.DeveloperName  = &apos;HRM_Performance_Case&apos;, RecordType.DeveloperName  = &apos;HRM_Medical_Case&apos;, RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;, RecordType.DeveloperName = &apos;HRM_Grievances_and_Arbitration_Case&apos; ))</errorConditionFormula>
        <errorDisplayField>HRM_BU_Status__c</errorDisplayField>
        <errorMessage>BU Status is required if Bargaining Unit is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Bargaining_Unit</fullName>
        <active>true</active>
        <description>For OIG cases, Bargaining Unit is required if Named Employee has been filled in.</description>
        <errorConditionFormula>AND (ISPICKVAL(HRM_Bargaining_Unit__c,&quot;&quot;), NOT(ISBLANK(HRM_Named_Employee__c)),  
RecordType.DeveloperName = &apos;HRM_OIG_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Bargaining_Unit__c</errorDisplayField>
        <errorMessage>Bargaining Unit is required if Named Employee has been filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Bargaining_Unit_Required</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISPICKVAL(HRM_Bargaining_Unit__c,&quot;&quot;), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
OR(RecordType.DeveloperName  = &apos;HRM_Disciplinary_Case&apos;, RecordType.DeveloperName  = &apos;HRM_Performance_Case&apos;))</errorConditionFormula>
        <errorDisplayField>HRM_Bargaining_Unit__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Charge_Violation_Description</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISBLANK(HRM_Charge_Violation_Description__c), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Charge_Violation_Description__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Credit_Card_Case</fullName>
        <active>true</active>
        <description>A value is required in &quot;Credit Card Case&quot; if Charge/Violation Type is &quot;Conduct - Credit Card....&quot;</description>
        <errorConditionFormula>AND (ISPICKVAL(HRM_Credit_Card_Case__c,&quot;&quot;), 
OR(INCLUDES(HRM_Charge_Violation_Type__c, &quot;Conduct – Credit Card Misuse/Payment&quot;),
INCLUDES(HRM_Charge_Violation_Type__c, &quot;Conduct – Credit Card Misuse/Purchase&quot;),
INCLUDES(HRM_Charge_Violation_Type__c, &quot;Conduct – Credit Card Misuse/Travel&quot;)), 
RecordType.DeveloperName = &apos;HRM_Disciplinary_Case&apos;)</errorConditionFormula>
        <errorDisplayField>HRM_Credit_Card_Case__c</errorDisplayField>
        <errorMessage>A value is required in &quot;Credit Card Case&quot; if Charge/Violation Type is &quot;Conduct - Credit Card....&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_DatePINIssuedNotNull</fullName>
        <active>true</active>
        <description>&apos;Date PIN Ends&apos; and &apos;Result of PIN/PIP&apos; should be required fields to CLOSE a case if the field &apos;Date PIN/PIP issued&apos; is not null.</description>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&quot;Closed&quot;),
RecordType.DeveloperName = &apos;HRM_Performance_Case&apos;,
TEXT(HRM_Date_PIN_Issued__c) &lt;&gt; Null,
OR(ISBLANK(HRM_Date_PIN_Ends__c), 
   ISBLANK(TEXT(HRM_Result_of_PIP__c))
  )
)</errorConditionFormula>
        <errorMessage>&apos;Date PIN Ends&apos; and &apos;Result of PIN/PIP&apos; should be required fields to CLOSE a case if the field &apos;Date PIN/PIP issued&apos; is not null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_DatePIPIssuedNotNull</fullName>
        <active>true</active>
        <description>&apos;Date PIP Ends&apos; and &apos;Result of PIN/PIP&apos; should be required fields to CLOSE a case if the field &apos;Date PIP issued&apos; is not null.</description>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&quot;Closed&quot;),
RecordType.DeveloperName = &apos;HRM_Performance_Case&apos;,
TEXT( HRM_Date_PIP_Issued__c ) &lt;&gt; Null,
OR (
    ISBLANK(HRM_Date_PIP_Ends__c), 
    ISBLANK(TEXT(HRM_Result_of_PIP__c))
   )
)</errorConditionFormula>
        <errorMessage>&apos;Date PIP Ends&apos; and &apos;Result of PIN/PIP&apos; should be required fields to CLOSE a case if the field &apos;Date PIP issued&apos; is not null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HRM_Date_MGMT_HR_Agree_to_Action</fullName>
        <active>true</active>
        <description>This field is required before the case can be closed.</description>
        <errorConditionFormula>AND (ISBLANK(HRM_Date_MGMT_HR_Agree_to_Action__c), ISPICKVAL( Status__c ,&quot;Closed&quot;), 
OR(RecordType.DeveloperName  = &apos;HRM_OIG_Case&apos;, RecordType.DeveloperName = &apos;HRM_Grievances_and_Arbitration_Case&apos; ))</errorConditionFormula>
        <errorDisplayField>HRM_Date_MGMT_HR_Agree_to_Action__c</errorDisplayField>
        <errorMessage>This field has to be filled in before the case can be closed.</errorMessage>
    </validationRules>
</CustomObject>